--- a/my-portfolio/.github/workflows/deploy.yml
+++ b/my-portfolio/.github/workflows/deploy.yml
@@ -1,24 +1,22 @@
-name: Deploy to GitHub Pages
+name: Build docs folder on push
 
 on:
   push:
     branches: [ "main" ]
+    paths-ignore:
+      - 'docs/**'
 
 permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
+  contents: write
 
 jobs:
-  build:
+  build-docs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -30,21 +28,13 @@ jobs:
         run: |
           npm ci || npm install
 
-      - name: Build
-        run: npm run build
+      - name: Clean docs and build
+        run: |
+          rm -rf docs
+          npm run build:docs
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Commit and push docs
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          path: ./dist
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          commit_message: "chore: build docs [skip ci]"
+          file_pattern: docs/*
