--- a/my-portfolio/.gitignore
+++ b/my-portfolio/.gitignore
@@ -12,6 +12,9 @@ dist
 dist-ssr
 *.local
 
+# Built site (committed by CI only)
+docs/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
