--- a/my-portfolio/.github/workflows/deploy.yml
+++ b/my-portfolio/.github/workflows/deploy.yml
@@ -38,3 +38,4 @@ jobs:
         with:
           commit_message: "chore: build docs [skip ci]"
           file_pattern: docs/*
+          add_options: '--force'
