CI: add Pages artifact workflow; add build:dist script

--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "build:docs": "vite build"
+    "build:docs": "vite build",
+    "build:dist": "vite build --outDir dist"
   },
   "dependencies": {
     "gsap": "^3.13.0",
