--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "build:docs": "vite build",
-    "build:dist": "vite build --outDir dist"
+    "build:dist": "vite build --outDir dist",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist -b gh-pages"
   },
   "dependencies": {
     "gsap": "^3.13.0",
