ci: allow manual deploy trigger and add concurrency to gh-pages workflow

--- a/my-portfolio/.github/workflows/gh-pages.yml
+++ b/my-portfolio/.github/workflows/gh-pages.yml
@@ -3,6 +3,7 @@ name: Deploy via gh-pages branch
 on:
   push:
     branches: [ "main" ]
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -10,6 +11,9 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    concurrency:
+      group: gh-pages-deploy
+      cancel-in-progress: false
     steps:
       - name: Checkout
         uses: actions/checkout@v4
