--- a/my-portfolio/.github/workflows/pages-artifact.yml
+++ b/my-portfolio/.github/workflows/pages-artifact.yml
@@ -25,15 +25,19 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+          cache-dependency-path: 'my-portfolio/package-lock.json'
       - name: Install dependencies
         run: |
+          cd my-portfolio
           npm ci || npm install
       - name: Build
-        run: npm run build
+        run: |
+          cd my-portfolio
+          npm run build
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: ./my-portfolio/dist
 
   deploy:
     environment:
