Simplify GitHub Actions workflow - use working-directory instead of cd

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,18 +25,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: my-portfolio/package-lock.json
           
       - name: Install dependencies
-        run: |
-          cd my-portfolio
-          npm ci
+        working-directory: ./my-portfolio
+        run: npm install
           
       - name: Build
-        run: |
-          cd my-portfolio
-          npm run build
+        working-directory: ./my-portfolio
+        run: npm run build
           
       - name: Setup Pages
         uses: actions/configure-pages@v5
@@ -44,7 +40,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: my-portfolio/dist
+          path: ./my-portfolio/dist
           
   deploy:
     environment:
